<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent_layout"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--<ImageView
                android:id="@+id/itemImage"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!--android:layout_weight="1"-->

                <ImageView
                    android:id="@+id/itemImage"
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/itemNameCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/itemName"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--android:layout_weight="1"-->
                <!--tools:srcCompat="@drawable/ic_launcher_background"-->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/categoryCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="Electronics"
                        android:textStyle="bold" />
                    <!--android:layout_weight="1"-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ratingReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="0"
                        android:textStyle="bold" />
                    <!--android:layout_weight="1"-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviewed"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailedReview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="No"
                        android:textStyle="bold" />
                    <!--android:layout_weight="1"-->
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>